--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -75,13 +75,13 @@ button {
 }
 
 #flush_success {
-	width: 100%;
-	padding-top: 28px;
-	padding-left: 2%;
-	padding-bottom: 28px;
-	margin-bottom: 15px;
-	color: #155724;
-	background-color: #d4edda;
+    width: 100%;
+    padding-top: 28px;
+    padding-left: 2%;
+    padding-bottom: 28px;
+    margin-bottom: 15px;
+    color: #155724;
+    background-color: #d4edda;
 }
 
 #flush_error {
@@ -92,4 +92,22 @@ button {
     margin-bottom: 15px;
     color: #721c24;
     background-color: #f8d7da;
+}
+
+tablee#employee_list th {
+    width: 30%;
+    padding: 10px 2%;
+}
+
+table#emplloyee_list td  {
+    width: 29%;
+    padding: 10px 2%;
+}
+
+tr.row1 {
+    background-color: #f2f2f2;
+}
+
+tr.row0 {
+    back-ground-color: #ffffff;
 }
