Add Report create

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -2,8 +2,7 @@
 
 body {
     color: #333333;
-    font-family: "Hiragino Kaku Gothic Pro", Meiryo, "MS PGothic", Helvetica, Arial, sans-serif;
-
+    font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
 }
 
 #header {
@@ -14,12 +13,13 @@ body {
 
 #content {
     width: 94%;
-    margin-top:15px;
+    margin-top: 15px;
     padding-left: 3%;
 }
+
 h1 {
     width: 94%;
-    padding-top:17px;
+    padding-top: 17px;
     padding-left: 3%;
     font-size: 24px;
     color: #eeeeee;
@@ -36,8 +36,8 @@ li {
 }
 
 p {
-    margin-top:15px;
-    margin-bottom:15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 a {
@@ -50,7 +50,7 @@ table, tr, th, td {
 }
 
 table {
-    width:100%;
+    width: 100%;
     table-layout: fixed;
 }
 
@@ -69,7 +69,7 @@ button {
     padding: 5px 10px;
 }
 
-#fotter {
+#footer {
     text-align: center;
 }
 
@@ -141,7 +141,6 @@ h1 {
     font-size: 24px;
     display: inline;
 }
-
 
 table#report_list th {
     font-weight: bold;
